docs/tech/virtualization/k8s/example/nginx-example-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-example
spec:
  ingressClassName: nginx
  rules:
    - host: test.mypatch.fr # Specify the host here
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
